# setup-dev

./: powershell-profile.ps1  readme.md  setup.ps1  vscode-setup.ps1
.template/python/base/: pyproject.toml
.template/python/web/: pyproject.toml
_template/_common/: .gitignore  readme.md
_template/java/base/src/main/java/br/edu/ufpa/icen/app/: App.java
_template/java/base/src/tests/java/br/edu/ufpa/icen/app/: TestApp.java
_template/java/web/: pom.xml
_template/java/web/src/main/java/br/edu/ufpa/icen/app/: AppAplication.java
_template/java/web/src/main/java/br/edu/ufpa/icen/app/services/: HelloServices.java
_template/java/web/src/tests/java/br/edu/ufpa/icen/app/: TestAppAplication.java
_template/python/base/: .gitignore  pyproject.toml  readme.md
_template/python/web/: pyproject.toml  readme.md
_template/python/web/src/my_app/: database.py  main.py
_template/typescript/base/: package.json
_template/typescript/web/: package.json  tsconfig.json
_template/typescript/web/src/: main.ts
config/: README.md  extensions.txt  software.json  vscode-settings.json
modules/: dev-help.psm1  make-project.psm1  util.psm1
